Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI ERRVAL __stdcall C13_IntInstall(LPVOID hEvent,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_IntReset(HCARD handleval);
C13DRVAPI INT __stdcall C13_IntStatus(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_IntUninstall(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_IORdW(INT addrval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_IOWINRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_IOWrW(USHORT value,INT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernBegin(LPVOID *vxdptr,LPSTR cardstr,LPCSTR cardname);
C13DRVAPI ERRVAL __stdcall C13_KernEnd(LPVOID vxdptr);
C13DRVAPI ERRVAL __stdcall C13_KernIntClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIntInstall(LPVOID hEvent,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIntStatus(LPINT valueptr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIntUninstall(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIORdB(LPBYTE valueptr,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernIOWrB(BYTE value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMCopyB(LPVOID destptr,LPVOID srcptr,USHORT countval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdB(LPBYTE valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdL(LPULONG valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdW(LPUSHORT valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrB(BYTE value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernStatus(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListAddr(INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header);
C13DRVAPI MSGADDR __stdcall C13_ListBlockRd(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockRdEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockWr(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockWrEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ListClear(LISTADDR listaddr,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_ListConfig(ULONG configval,INT count,USHORT skipval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_ListConfigEx(ULONG configval,INT count,USHORT skipval,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataRdEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataWrEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListNextRd(ULONG listaddr,LPUSHORT header);
C13DRVAPI MSGADDR __stdcall C13_ListNextWr(ULONG listaddr,LPUSHORT header);
C13DRVAPI VOID __stdcall C13_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);