Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_IntRd(ref UInt16 typevalval, ref UInt16 infoval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_IntReset(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntStatus(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_IntUninstall(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_IORdW(Int32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_IOWINRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_IOWINWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_IOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernBegin@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 C13_KernBegin(IntPtr* vxdptr, ref string cardstr, ref string cardname);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernEnd(IntPtr vxdptr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIntClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIntParam@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIntParam(UInt32 clraddr, UInt32 clrwidth, UInt32 clrvalue, UInt32 stataddr, UInt32 statwidth, UInt32 statvalue, UInt32 statmask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIntStatus(ref Int32 valueptr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIntUninstall(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIORdB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIORdB(ref byte valueptr, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernIOWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernIOWrB(byte value, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMCopyB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMCopyB(IntPtr destptr, IntPtr srcptr, UInt16 countval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMFillW(UInt16 value, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMRdB@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMRdB(ref byte valueptr, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMRdL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMRdL(ref UInt32 valueptr, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMRdsL(ref UInt32 bufptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMRdsW(ref UInt16 bufptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMRdW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMRdW(ref UInt16 valueptr, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMWrB@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMWrB(byte value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMWrL(UInt32 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMWrsL(ref UInt32 bufptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMWrsW(ref UInt16 bufptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernMEMWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernMEMWrW(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_KernStatus@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_KernStatus(ref UInt32 valueptr, UInt32 typeval, UInt32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListAddr(Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListAddrEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListAddrEx(Int32 index, UInt32 listaddr, ref UInt16 header);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListBlockRd(ref UInt16 buf, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListBlockRdEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListBlockRdEx(ref UInt16 buf, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListBlockWr(ref UInt16 buf, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListBlockWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListBlockWrEx(ref UInt16 buf, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListClear(UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListConfig(UInt32 configval, Int32 count, UInt16 skipval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListConfigEx(UInt32 configval, Int32 count, UInt16 skipval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListDataRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListDataRdEx(ref UInt16 buf, Int32 count, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListDataWrEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListDataWrEx(ref UInt16 buf, Int32 count, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListInit(UInt32 listaddr, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListNextRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListNextRd(UInt32 listaddr, ref UInt16 header);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListNextWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_ListNextWr(UInt32 listaddr, ref UInt16 header);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ListPostRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ListPostWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ListPreRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ListPreWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
